# git-time

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  lint-check.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
src/: CMakeLists.txt  check.cpp  check.h  commit_create.cpp  commit_create.h  helpers.cpp  helpers.h  main.cpp
src/commit-art/: .gitignore  LICENSE.txt  main.py
src/commit-art/tests/: test_find_max_daily_commits.py  test_str_to_sprite.py
src/gui/: .eslintcache  package-lock.json  package.json
src/gui/public/: index.html
src/gui/src/: App.js
src/gui/src/components/layout/: Navbar.js
src/gui/src/components/pages/: About.js  Home.js  Support.js
test/: CMakeLists.txt  test_format.cpp  test_trim.cpp
