CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)
PROJECT(git-time)
ADD_SUBDIRECTORY(src)
FIND_PACKAGE(Git QUIET)
if(NOT GIT_FOUND)
	MESSAGE(FATAL_ERROR "git not found")
endif()
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules")
FIND_PACKAGE(libgit2 REQUIRED)
#INCLUDE(CTest)
#if(BUILD_TESTING)
#	ADD_SUBDIRECTORY(test)
#endif()
